2013-01-31  Anders Carlsson  <andersca@apple.com>

        Stop using OutgoingMessage
        https://bugs.webkit.org/show_bug.cgi?id=108495

        Reviewed by Sam Weinig.

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::sendMessage):
        (CoreIPC::Connection::sendOutgoingMessages):
        * Platform/CoreIPC/Connection.h:
        (Connection):
        * Shared/ChildProcessProxy.cpp:
        (WebKit::ChildProcessProxy::~ChildProcessProxy):
        (WebKit::ChildProcessProxy::sendMessage):
        (WebKit::ChildProcessProxy::didFinishLaunching):
        * Shared/ChildProcessProxy.h:
        (ChildProcessProxy):

2013-01-31  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Make it possible to compile WebKit2 Qt related files without access to internal WK2 C++ API
        https://bugs.webkit.org/show_bug.cgi?id=108472

        Reviewed by Andreas Kling.

        Add a new module to the qmake build system that represents the part of the WebKit2 Qt integration
        that doesn't depend on WebKit2 internals.

        Changed qwebnavigationhistory.cpp to not use any internal headers and compile it as part of the
        internals-free module.

        * Target.pri:
        * UIProcess/API/qt/qwebnavigationhistory.cpp:
        * WebKit2.pro:
        * WebKit2QML.pri: Added.

2013-01-31  Simon Hausmann  <simon.hausmann@digia.com>

        Unreviewed trivial build fix: Add missing virtual destructor to
        LayerTreeRendererClient. Otherwise the build with -Werror breaks, which
        complains (rightly so) that we're deleting a sub-class where the super class
        doesn't have a virtual destructor.

        * UIProcess/CoordinatedGraphics/LayerTreeRenderer.h:
        (WebKit::LayerTreeRendererClient::~LayerTreeRendererClient):

2013-01-31  Seulgi Kim  <seulgikim@company100.net>

        Coordinated Graphics: view the debug border/repaint count of the non composited layer.
        https://bugs.webkit.org/show_bug.cgi?id=108401
